fixed gap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@ body {
 
 .search-bar {
     max-width: 450px;
-    margin: 150px auto;
+    margin: 50px auto;
 }
 
 .search-bar .search-input {
